--- a/Instagrid/View/Base.lproj/Main.storyboard
+++ b/Instagrid/View/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
-    <device id="retina4_0" orientation="landscape" appearance="light"/>
+    <device id="retina6_5" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -20,11 +20,11 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="PhotoGridViewController" customModule="Instagrid" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
+                        <rect key="frame" x="0.0" y="0.0" width="896" height="414"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text=" Instagrid" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oO5-60-R2K">
-                                <rect key="frame" x="236" y="10" width="96.5" height="30"/>
+                                <rect key="frame" x="399.66666666666669" y="10" width="96.666666666666686" height="30"/>
                                 <fontDescription key="fontDescription" name="ThirstySoftRegular" family="Thirsty Soft" pointSize="23"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -33,16 +33,16 @@
                                 </variation>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Nmx-BP-vp0">
-                                <rect key="frame" x="169" y="45" width="230" height="230"/>
+                                <rect key="frame" x="286" y="45" width="324" height="324"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="5Bo-qi-QZX">
-                                        <rect key="frame" x="10" y="10" width="210" height="210"/>
+                                        <rect key="frame" x="10" y="10" width="304" height="304"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="ClC-Jc-L3V">
-                                                <rect key="frame" x="0.0" y="0.0" width="210" height="100"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="304" height="147"/>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="7sE-gy-35g">
-                                                <rect key="frame" x="0.0" y="110" width="210" height="100"/>
+                                                <rect key="frame" x="0.0" y="157" width="304" height="147"/>
                                             </stackView>
                                         </subviews>
                                     </stackView>
@@ -57,38 +57,38 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="GTt-OS-YRg">
-                                <rect key="frame" x="498" y="45" width="50" height="230"/>
+                                <rect key="frame" x="758.66666666666663" y="45" width="73.333333333333371" height="324"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 1" translatesAutoresizingMaskIntoConstraints="NO" id="vL5-Z1-gCu">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="73.333333333333329" height="73.666666666666671"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="vL5-Z1-gCu" secondAttribute="height" multiplier="1:1" id="hRi-Pj-vbf"/>
                                         </constraints>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 2" translatesAutoresizingMaskIntoConstraints="NO" id="8rv-VP-sq6">
-                                        <rect key="frame" x="0.0" y="60" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="83.666666666666657" width="73.333333333333329" height="73.333333333333343"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 3" translatesAutoresizingMaskIntoConstraints="NO" id="flC-Ix-lCt">
-                                        <rect key="frame" x="0.0" y="120" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="167" width="73.333333333333329" height="73.666666666666686"/>
                                     </imageView>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Layout 4" translatesAutoresizingMaskIntoConstraints="NO" id="fSy-ZX-4y3">
-                                        <rect key="frame" x="0.0" y="180" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="250.66666666666671" width="73.333333333333329" height="73.333333333333343"/>
                                     </imageView>
                                 </subviews>
                                 <variation key="heightClass=regular" axis="horizontal" spacing="20"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="HkX-eY-S2U">
-                                <rect key="frame" x="20" y="139" width="129.5" height="42.5"/>
+                                <rect key="frame" x="64.000000000000014" y="186" width="129.33333333333337" height="42.333333333333343"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Arrow Up" translatesAutoresizingMaskIntoConstraints="NO" id="rmH-nu-Anr">
-                                        <rect key="frame" x="60" y="0.0" width="10" height="10"/>
+                                        <rect key="frame" x="59.666666666666671" y="0.0" width="10" height="10"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="10" id="MH4-0u-pPN"/>
                                             <constraint firstAttribute="width" secondItem="rmH-nu-Anr" secondAttribute="height" multiplier="1:1" id="Vhn-ot-igI"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe up to share" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lR-Gk-k9I">
-                                        <rect key="frame" x="0.0" y="19" width="129.5" height="23.5"/>
+                                        <rect key="frame" x="0.0" y="19" width="129.33333333333334" height="23.333333333333329"/>
                                         <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="21"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -96,28 +96,28 @@
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="qZd-fH-4oq">
-                                <rect key="frame" x="498" y="45" width="50" height="230"/>
+                                <rect key="frame" x="758.66666666666663" y="45" width="73.333333333333371" height="324"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Wvr-kZ-kua">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="73.333333333333329" height="66"/>
                                         <connections>
                                             <action selector="didTapOnLayoutButtonWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="HIy-uZ-fj6"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KmX-Cb-awc">
-                                        <rect key="frame" x="0.0" y="60" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="86" width="73.333333333333329" height="66"/>
                                         <connections>
                                             <action selector="didTapOnLayoutButtonWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L7X-bx-OY2"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bRV-wa-r2D">
-                                        <rect key="frame" x="0.0" y="120" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="172" width="73.333333333333329" height="66"/>
                                         <connections>
                                             <action selector="didTapOnLayoutButtonWithSender:" destination="BYZ-38-t0r" eventType="touchUpInside" id="UeD-44-FzL"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G5f-FR-uCi">
-                                        <rect key="frame" x="0.0" y="180" width="50" height="50"/>
+                                        <rect key="frame" x="0.0" y="258" width="73.333333333333329" height="66"/>
                                         <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <state key="normal">
                                             <color key="titleColor" red="0.84705882349999995" green="0.84705882349999995" blue="0.84705882349999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -156,6 +156,7 @@
                             <constraint firstItem="HkX-eY-S2U" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ZsY-4q-05B"/>
                             <constraint firstItem="GTt-OS-YRg" firstAttribute="trailing" secondItem="qZd-fH-4oq" secondAttribute="trailing" id="b0o-na-Tzl"/>
                             <constraint firstItem="Nmx-BP-vp0" firstAttribute="leading" secondItem="HkX-eY-S2U" secondAttribute="trailing" constant="40" id="fxZ-Fw-RQj"/>
+                            <constraint firstItem="Nmx-BP-vp0" firstAttribute="top" secondItem="oO5-60-R2K" secondAttribute="bottom" constant="5" id="h8Q-dJ-Tyi"/>
                             <constraint firstItem="oO5-60-R2K" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="20" id="hKs-7T-ftK">
                                 <variation key="heightClass=compact" constant="10"/>
                             </constraint>
@@ -182,6 +183,7 @@
                                 <exclude reference="Bch-0m-7Ny"/>
                                 <exclude reference="ItL-he-TJc"/>
                                 <exclude reference="fxZ-Fw-RQj"/>
+                                <exclude reference="h8Q-dJ-Tyi"/>
                                 <exclude reference="sP2-1p-7Aa"/>
                                 <exclude reference="55U-30-Xhm"/>
                                 <exclude reference="63v-mf-HLQ"/>
@@ -203,11 +205,12 @@
                                 <exclude reference="ItL-he-TJc"/>
                                 <exclude reference="LGy-qR-ML7"/>
                                 <exclude reference="fxZ-Fw-RQj"/>
+                                <include reference="h8Q-dJ-Tyi"/>
                                 <exclude reference="sP2-1p-7Aa"/>
                                 <include reference="55U-30-Xhm"/>
                                 <exclude reference="63v-mf-HLQ"/>
                                 <exclude reference="6Ca-Or-1Zw"/>
-                                <include reference="F7m-hP-Ju3"/>
+                                <exclude reference="F7m-hP-Ju3"/>
                                 <exclude reference="oAK-rD-H2S"/>
                                 <include reference="oj9-f0-f97"/>
                                 <exclude reference="t1e-Bb-gWC"/>
@@ -230,14 +233,14 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="135" y="121.47887323943662"/>
+            <point key="canvasLocation" x="134.59821428571428" y="120.28985507246378"/>
         </scene>
     </scenes>
     <resources>
-        <image name="Arrow Up" width="4.5" height="3.5"/>
-        <image name="Layout 1" width="27" height="27"/>
-        <image name="Layout 2" width="27" height="27"/>
-        <image name="Layout 3" width="27" height="27"/>
-        <image name="Layout 4" width="81" height="81.5"/>
+        <image name="Arrow Up" width="4.6666665077209473" height="3.3333332538604736"/>
+        <image name="Layout 1" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="Layout 2" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="Layout 3" width="26.666666030883789" height="26.666666030883789"/>
+        <image name="Layout 4" width="81" height="81.333335876464844"/>
     </resources>
 </document>
