--- a/Instagrid/View/Base.lproj/Main.storyboard
+++ b/Instagrid/View/Base.lproj/Main.storyboard
@@ -124,10 +124,10 @@
                                 <variation key="heightClass=regular" axis="horizontal"/>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="9" translatesAutoresizingMaskIntoConstraints="NO" id="HkX-eY-S2U" userLabel="Stack View Swipe">
-                                <rect key="frame" x="20" y="139" width="134" height="42.5"/>
+                                <rect key="frame" x="20" y="139" width="139" height="42.5"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" image="Arrow Up" translatesAutoresizingMaskIntoConstraints="NO" id="rmH-nu-Anr">
-                                        <rect key="frame" x="62" y="0.0" width="10" height="10"/>
+                                        <rect key="frame" x="64.5" y="0.0" width="10" height="10"/>
                                         <accessibility key="accessibilityConfiguration" identifier="arrowImageView"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="10" id="MH4-0u-pPN"/>
@@ -135,7 +135,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Swipe up to share" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6lR-Gk-k9I">
-                                        <rect key="frame" x="2.5" y="19" width="129.5" height="23.5"/>
+                                        <rect key="frame" x="5" y="19" width="129.5" height="23.5"/>
                                         <accessibility key="accessibilityConfiguration" identifier="swipeToShareLabel"/>
                                         <fontDescription key="fontDescription" name="Delm-Medium" family="Delm" pointSize="24"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -166,6 +166,7 @@
                             <constraint firstItem="GTt-OS-YRg" firstAttribute="bottom" secondItem="Nmx-BP-vp0" secondAttribute="bottom" id="Fzz-8Y-AWW"/>
                             <constraint firstItem="Nmx-BP-vp0" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Huz-QR-8QD"/>
                             <constraint firstItem="HkX-eY-S2U" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Ic1-ng-4td"/>
+                            <constraint firstItem="Nmx-BP-vp0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="JrF-2r-lcF"/>
                             <constraint firstItem="GTt-OS-YRg" firstAttribute="leading" secondItem="qZd-fH-4oq" secondAttribute="leading" id="Kav-SB-K0b"/>
                             <constraint firstItem="Nmx-BP-vp0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Kcr-wj-5hB"/>
                             <constraint firstItem="GTt-OS-YRg" firstAttribute="top" secondItem="Nmx-BP-vp0" secondAttribute="top" id="Miz-QA-hFj"/>
@@ -174,12 +175,8 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Nmx-BP-vp0" secondAttribute="bottom" constant="50" id="RAR-HR-9WD"/>
                             <constraint firstItem="Nmx-BP-vp0" firstAttribute="top" secondItem="HkX-eY-S2U" secondAttribute="bottom" constant="15" id="VNU-U6-pfE"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="Nmx-BP-vp0" secondAttribute="bottom" constant="50" id="Ww0-8a-LCI"/>
-                            <constraint firstItem="Nmx-BP-vp0" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="XQ2-ga-eq2">
-                                <variation key="heightClass=compact" constant="300"/>
-                                <variation key="heightClass=regular-widthClass=compact" constant="50"/>
-                            </constraint>
                             <constraint firstItem="GTt-OS-YRg" firstAttribute="top" secondItem="Nmx-BP-vp0" secondAttribute="top" id="Z2m-Eg-OLO"/>
-                            <constraint firstItem="Nmx-BP-vp0" firstAttribute="leading" secondItem="HkX-eY-S2U" secondAttribute="trailing" constant="20" id="ZAO-kH-1cD"/>
+                            <constraint firstItem="Nmx-BP-vp0" firstAttribute="leading" secondItem="HkX-eY-S2U" secondAttribute="trailing" constant="15" id="ZAO-kH-1cD"/>
                             <constraint firstItem="qZd-fH-4oq" firstAttribute="top" secondItem="GTt-OS-YRg" secondAttribute="top" id="aGe-fQ-1YR"/>
                             <constraint firstItem="GTt-OS-YRg" firstAttribute="trailing" secondItem="qZd-fH-4oq" secondAttribute="trailing" id="b0o-na-Tzl"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="qZd-fH-4oq" secondAttribute="bottom" constant="174.66666666666663" id="ehM-Iz-mMq"/>
@@ -222,6 +219,7 @@
                                 <exclude reference="Ic1-ng-4td"/>
                                 <exclude reference="yfO-Qf-10F"/>
                                 <exclude reference="5Je-Gk-xJ7"/>
+                                <exclude reference="JrF-2r-lcF"/>
                                 <exclude reference="Qaf-zN-q9J"/>
                                 <exclude reference="ZAO-kH-1cD"/>
                                 <exclude reference="euE-Nc-kAA"/>
@@ -255,7 +253,6 @@
                                 <exclude reference="5Je-Gk-xJ7"/>
                                 <include reference="Qaf-zN-q9J"/>
                                 <exclude reference="VNU-U6-pfE"/>
-                                <exclude reference="XQ2-ga-eq2"/>
                                 <include reference="ZAO-kH-1cD"/>
                                 <exclude reference="euE-Nc-kAA"/>
                                 <exclude reference="08x-X8-6px"/>
@@ -282,6 +279,7 @@
                         <variation key="heightClass=regular-widthClass=compact">
                             <mask key="constraints">
                                 <include reference="h9o-z3-ql8"/>
+                                <include reference="JrF-2r-lcF"/>
                                 <exclude reference="wqK-SN-X7S"/>
                             </mask>
                         </variation>
